--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100%;
+  height: fill;
   background: #f9f9f9;
 }
 
