--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,14 +366,14 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------------------------------------------------
 # Sections General
-
+--------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 80px 0;
   overflow: hidden;
 }
 
 .section-bg {
-  background-color: #f4fbfe;
+  background-color: #49b5e7;
 }
 
 .section-title {
@@ -393,7 +393,6 @@ section {
 .section-title p {
   margin-bottom: 0;
 }
---------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
